--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -327,7 +327,7 @@ It appears that the neighborhoods with the most expensive Airbnbs come from a ra
 
 ### Conclusion for Part I
 
-Based on our hypothesis from our proposal, we wanted to determine how location played a role in determining the price of Airbnbs in New York City. Firstly, we took some fundamental variables of the boroughs in New York City such as median price and number of listings to get a basic understanding of the dataset we are working with. After finding out that both Manhattan and Brooklyn dominated the Airbnb scene in terms of number of listings, we wanted to see how these two locations play a role in the price of Airbnbs. We predicted that Manhattan would have a higher true median price than Brooklyn because Manhattan is known from previous knowledge to be a higher-class neighborhood. So, we conducted a hypothesis test to determine if there is a true median price difference between these two cities. We concluded that we did indeed have enough convincing evidence to conclude that there is a true median price difference with Manhattan's median price being higher than Brookly's median price. After conducting a confidence interval for different in true median price, we are 95% confident that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. We then created a colored scatterplot map to see how coordinates play a role in the price of Airbnbs. We concluded that Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%. We then decided to look into the top ten neighborhoods and surprisngly we found that the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. 
+Based on our research question from our proposal, we wanted to determine how location played a role in determining the price of Airbnbs in New York City. First, we summarized the sample statistics of the boroughs in New York City such as median price and number of listings to get a basic understanding of the count and dsitribution of price in relation to borough. After finding out that both Manhattan and Brooklyn dominated the Airbnb scene in terms of number of listings, we wanted to see how these two locations play a role in the price of Airbnbs. We predicted that Manhattan would have a higher true median price than Brooklyn because Manhattan is known from previous knowledge to be a higher-class neighborhood. So, we conducted a hypothesis test to determine if there is a true median price difference between these two cities. We concluded that we did indeed have sufficent evidence to conclude that there is a true median price difference with Manhattan's median price being higher than Brooklyn's median price. After conducting a confidence interval for different in true median price, we are 95% confident that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. We then created a new variable called "price_median" which is a catagorical variable which indicated whether the price is at or above the median price of a listing or not. We then used this new variable to create a scatterplot map with color indicating price median to see how coordinates play a role in the price of Airbnbs. We concluded that Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%. Finally, we investigated last variable corresponding to location: neighbourhood. Looking into the top ten median priced neighborhoods for Airbnb's we surprisngly found that the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. 
 
 ### Part II: Availability and Property Listing
 
@@ -717,5 +717,5 @@ We are 95% confident that the median availability for high volume hosts is betwe
 
 ### Conclusion For Part 2
 
-Based on the hypothesis of our proposal, we wanted to see how the way in which a property is listed (type of room, for example) influences the availability of a listing. We predicted that words like "spacious" and "private" would influence our availability of a listing. Turns out, words associated with private were highly sought after such as "private", "apartment" indicating a private enclave, and "bedroom" indicating one's private space. We also predicted that more experienced hosts with more listings would have more availability days because they have more listings and our hypothesis test indicated that we were right.
+Based on our second research question in our proposal, we wanted to see how the way in which a property is listed (type of room and description for example) influences the availability of a listing. Assuming availibility is a good predictor of desirability (more availible, less desireable). In our proposal we looked at how the variable “room_type” affects the availability of the listing. We hypothesized that room_type would be a major factor in predicting availability because our exploratory analysis showed that a shared room is likely the least desired of the three room types due to the largest IQR and highest median availability of the three roomtypes. Through our text analysis of the descriptions we found words associated with private were highly sought after such as "private", "apartment" indicating a private enclave, and "bedroom" indicating one's private space. In additon, our linear model predicting availability by all variables regarding listing showed room type to be a relevant predictor. In additon, we predicted that more experienced hosts with more listings would have more availability days because they have more listings and our hypothesis test indicated that we were right.
 ### Overall
