--- a/writeup/writeup.Rmd
+++ b/writeup/writeup.Rmd
@@ -5,17 +5,44 @@ date: "12/6/2019"
 output: github_document
 ---
 
+### Introduction: 
+Every day, thousands of tourists visit the historic city of New York. It is the most populous city in the United States and is a popular attraction for tourists, not only from the United States but around the world. Given the popularity of tourists, the lodging and hotel industry has benefited tremendously. Airbnb is an online marketplace for arranging and offering homestays to thousands of tourists every day in the beloved city of New York. Our data analysis investigates the Airbnb dataset of New York City. Our central focus will be on predicting, analyzing, and performing tests on the price and availability of Airbnb listings in New York City. For our final project, we want to answer two major research questions: How does location influence the price of Airbnb listings in New York City and how does the way in which an Airbnb is described influence price?
+
+Using the Airbnb dataset, we hope to gain a better understanding of the gig hospitality market in New York City for 2019. Specifically, we want to find, explore and understand trends in the market as they relate to supply (availability) and demand (what people are willing to pay). The data set we chose allows us to draw conclusions and understand the factors that contribute to the New York City Airbnb scene.
+
+Through Kaggle, we found this data set (https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data) that was collected, and continues to be updated, in 2019 on Airbnb listings in New York City. This data set continues to be curated by a 4th year data science student at Drexel University (Dgomonov). We are unable to reach out to him to get more information on the data set, such as where he got it from or how he collected it, because our account on Kaggle is not at the "Contributor tier." However, we can reasonably infer that the dataset was created by web scraping Airbnb’s website. Since the dataset is looking at all the listings in NYC, we are assuming that the dataset is indicative of a population. Therefore, we have created a sample dataset for our data analysis.
+
+To analyze this data set, it is first important to understand its variables: listing ID, name of the listing, host ID, the name of the host, location, neighbourhood, latitude and longitude coordinates, room type, price in dollars, minimum_nights, number of reviews, latest review, number of reviews per month, amount of listing per host and availability. A description of each of these is included in the codebook, as well as shown below
+
+### Dimensions:
+
+`Observations: 48,895` `Variables: 16`
+
+### Codebook:
+
+`Variable Name                  --> Description`
+`id                             --> The specific listing's ID value from the Airbnb website.` 
+`name                           --> Host-produced description of the listing.`
+`host_id                        --> The ID unique for the listing's owner.`
+`host_name                      --> First name of host/hosts.`
+`neighbourhood_group            --> One of the NYC five boroughs (Manhattan, Brooklyn, Queens, Staten Island, Bronx)`
+`neighbourhood                  --> Specific area within each of the boroughs.`
+`latitude                       --> Horizontal global coordinate.`
+`longitude                      --> Vertical global coordinate.`
+`room_type                      --> One of three classifications (Etire home/apartment, Private Room, or Shared Room).`
+`price                          --> The listing's price in United States dollars per night.`
+`minimum_nights                 --> The minimum nights required by the host to stay.`
+`number_of_reviews              --> Quantity of online reviews given for a listing.`
+`last_review                    --> Year/Month/Date of the most recent review.`
+`reviews_per_month              --> Quantity of reviews on average in a given month.`
+`calculated_host_listings_count --> Number of listings per one host.`
+`availability_365               --> Quantity of days in which the listing is available.`
+
+Based on these factors, it seems as though price and availability would make the most interesting response variables because they are very important to understand the economic landscape. For example, someone who is looking to book an Airbnb is going to be very interested in what is available within their budget. Of course, there are going to be other factors that are important to a consumer, such as location within NYC. However, we expect availability and price to be the most predictive and representative of the Airbnbs in New York City.
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
-
-Your project writeup goes here! Before you submit, make sure your chunks are turned off with `echo = FALSE`. 
-
-You can add sections as you see fit. Make sure you have a section called Introduction at the beginning and a section called Conclusion at the end. The rest is up to you!
-     
-### Load packages & data
-
-Loaded the following packages that will be needed to perform analysis:
 
 ```{r load-packages, message=FALSE}
 library(tidyverse) 
@@ -27,30 +54,26 @@ library(broom)
 library(tidytext)
 ```
 
-Uploaded the Airbnb data set from Kaggle via a csv file:
-
 ```{r load-data, message=FALSE}
 abnb <- read_csv("AB_NYC_2019.csv")
 ```
 
-We are assuming that the data we have for Airbnbs in New York City represents the population given that a) there are 48,895 observations and b) we consulted Dr. Tackett and she thinks that the data was most likely web scapped from the Airbnb website. 
-
-Therefore, in order to perform analysis, we created a sample set called abnb_sample of 4000 randomly selected observations.
+In order to perform analysis, we created a sample set of 4000 randomly selected observations. The following analysis and conclusions are drawn from that sample set.
 
 ```{r abnb_sample}
 set.seed(111519)
 abnb_sample <- sample_n(abnb, 4000)
 ```
 
-It is important to note that we were advised that our exploratory data analysis should involve the entire dataset while our conclusions should be drawn from the sample.
-
 ### Part I: Price and Location
+
+For our first research question, we hope to explore how location influences the price as a response variable. Some variables from the dataset that pertains to price and would be interesting to explore are borough, neighborhood, latitude, and longitude. We know that in real estate location highly influences the value  of properties and rent rates, especially in a large, wealthy, productive city like New York. Thus, we believe that this would likely have a relationship with price.
 
 In part I, the following research question will be examined: How does location (borough and co-ordinates, for example) influence the price of a listing?
 
 ### Understanding Price
 
-To start, a bootstrap distribution was constructed for the median price of Airbnbs in NYC. This will help to better understand the range of prices and the real estate landscape that the true median price would be within.
+To start, a bootstrap distribution and 95% bootstrap confidence interval was constructed for the median price of Airbnbs in NYC. This will help to better understand the range of prices and the real estate landscape that the true median price would be within. 
 
 ```{r boot-med_price}
 set.seed(111519)
@@ -60,13 +83,11 @@ boot_dist_median_price <- abnb_sample %>%
   calculate(stat = "median")
 ```
 
-Creating a 95% bootstrap confidence interval for the the median price of Airbnbs in NYC:
-
 ```{r boot_dist_median_priceci}
 (ci_bounds <- get_ci(boot_dist_median_price, level= 0.95))
 ```
 
-Creating a visualizaing of the bootstrap distribution for median price:
+A visualizaing of the bootstrap distribution for median price is shown below:
 
 ```{r boot_dist_median_visu}
 visualize(boot_dist_median_price) + 
@@ -74,13 +95,13 @@ visualize(boot_dist_median_price) +
   shade_ci(ci_bounds)
 ```
 
-As depicted in the output and visualization, we are 95% confident that the population median price per night of Airbnbs in NYC is between $100.00 and $110.00. This information will help us understand prices in the Airbnb market as we go about attempting to draw comparisions.
+We are 95% confident that the population median price per night of Airbnbs in NYC is between $100.00 and $110.00. This information will help us understand prices in the Airbnb market as we go about attempting to draw comparisions.
 
 ### Exploring Boroughs
 
 The first location variable that might be helpful to explore is borough (neighbourhood_group) given that New York City is divided into five areas (The Bronx, Brooklyn, Manhattan, Queens, and Staten Island).
 
-Creating an exploratory bar graph that displays number of listings by borough in New York City:
+A bar graph that displays number of listings by borough in New York City is shown below:
 
 ```{r visualization-univariate}
 ggplot(data = abnb, mapping = aes(x = neighbourhood_group)) +
@@ -90,8 +111,6 @@ ggplot(data = abnb, mapping = aes(x = neighbourhood_group)) +
 
 Manhattan and Brooklyn dominate the number of listings on Airbnb in New York City. More specifically, there is roughly 20,000 listings in Brooklyn and slightly more than 20,000 listings in Manhattan. Queens follows after with roughly 5,000 listings, followed by the Bronx and Staten Island with fewer than 1,100 listings each.
 
-Calculating summary statistics that will count the number of listings in each neighborhood group:
-
 ```{r neighbourhood_group-count}
 abnb %>%
   count(neighbourhood_group) %>%
@@ -99,8 +118,6 @@ abnb %>%
 ```
 
 Manhattan has the most listings at 21,661 followed by Brooklyn at 20,104 listings, followed by Queens at 5,666, Bronx at 1,091, and Staten Island last at only 373 listings.
-
-Creating summary statistics that displays the median price of each neighborhood group.
 
 ```{r summarise-price}
 abnb %>%
@@ -110,21 +127,11 @@ abnb %>%
   head(5)
 ```
 
-Manhattan has the highest median price at 150 followed by Brooklyn at 90, Queens and Staten Island at 75, and the Bronx last at 65. We will develop a linear model to describe how boroughs influence price and, since Manhattan had the largest volume of Airbnbs and the highest median price, that will be the baseline for comparison with other boroughs.
+Manhattan has the highest median price at 150 followed by Brooklyn at 90, Queens and Staten Island at 75, and the Bronx last at 65. 
 
-Using fct_relevel to make Manhattan the baseline level for neighbourhood_group:
+It is clear that quantity of listings as well as median price varies greatly across each of the five boroughs. After further exploration of the relevant location variables we will predict how much these variables influence price by developing a linear model.
 
-```{r mutate-neighbourhood_group}
-abnb_sample <- abnb_sample %>%
-  mutate(neighbourhood_group = fct_relevel(neighbourhood_group, 
-                                           "Manhattan", 
-                                           "Brooklyn",
-                                           "Staten Island",
-                                           "Queens",
-                                           "Bronx"))
-```
-
-Creating a boxplot to show price by borough (neighbourhood_group):
+First we would liketo visualize the distribution of price by borough, below is a boxplot to show price by borough (neighbourhood_group):
 
 ```{r price_box_neighbourhood_group, message=FALSE}
 abnb_sample %>%
@@ -136,9 +143,8 @@ abnb_sample %>%
     y = "Price (per night)")
 ```
 
-The graph above are boxplots that show the price of renting an Airbnb per night based on the borough that the Airbnb is located. Due to extremely right skewed data and very expensive outliers this box plot does not display the actual distribution as well as we hoped. In order to make a more useful visualization, we filtered for price below $1000 and recreated the box plot above.
+The boxplot above shows the price of renting an Airbnb per night based on the borough that the Airbnb is located. Due to extremely right skewed data and very expensive outliers this box plot does not display the actual distribution as well as we hoped. In order to make a more useful visualization, we filtered for price below $1000 and recreated the box plot above.
 
-Creating a boxplot to show price by borough (neighbourhood_group):
 ```{r filtering_resid}
 abnb_sample_filter <- abnb_sample %>%
   filter(price <= 1000)
@@ -154,16 +160,78 @@ abnb_sample_filter %>%
     y = "Price (per night)")
 ```
 
-We know from the summary statistics above that Manhattan has the highest median price, followed by Brooklyn,Queens and Staten Island, and finally the Bronx has the lowest median available price for Airbnb's in Manhattan per night. Manhattan and Queens have the most (largest) ouliers, Manhattan also has the largerst IQR. 
+We have already found above, that Manhattan has the highest median price, followed by Brooklyn, Queens and Staten Island, and finally the Bronx has the lowest median available price for Airbnb's in Manhattan per night. What we did not know that is evident in both the origianl and the above graph is that Manhattan and Queens have the largest ouliers (Manhattan's largest outlier stands at >$8,000 per night and Queen's is about $2,000 per night). Staten Island has the lowest IQR and Manhattan has the largerst IQR, this is not surprising considering the number of listings that we found above, Manhattan with 21,661 vs Staten Island with only 373. 
 
+### Visualizing Manhattan
 
-Creating a linear model to predict Airbnb price by borough. It is first important to discuss the assumptions we are making when performing this regression. We are assuming each listing is independent because the pricing of one space does not driectly influence the other. While some might argue there is dependence between listings to some extent, the market for Airbnbs in NYC is free and competitive so renters, ideally, don't collude.
+From the previous sections, it has become clear that Manhattan is the most expensive borough for Airbnbs. In order to confirm this visually, we will create a scatterplot. To simplify the scatterplot, price will be broken down into two catergories based on the median price of all Airbnbs in NYC. In order to do this we creae and use a new variable (price_case) which describes whether the price of the listing is at or above the median price or below the median price. A visualization of Airbnbs by latidude and longitude co-ordinates and using color to distinguish between the price types is shown below.
+
+```{r median_price-mutate}
+abnb_sample <- abnb_sample %>%
+   mutate(price_median = median(price), 
+          price_case = case_when(
+      price >= price_median ~ "Median or Above",
+      price < price_median ~ "Below Median", 
+    ))
+```
+
+```{r price-at-location}
+abnb_sample %>%
+  ggplot(mapping = aes (x = longitude, 
+                        y = latitude, 
+                        color = price_case)) +
+  geom_jitter(alpha = 0.5) +
+  labs(title = "Prices at Latitude and Longitude Coordinates", 
+       x = "Longitude", 
+       y = "Latitude", 
+       color = "Price Case")
+```
+
+It is clear from this map, that the cases in which the prices are at the median or above (blue dots) are clustered around Manhattan. Therefore, visualization once again confirms our previous findings. The area that appears to have the second most number of blue dots is Brooklyn, which is right next to Manhattan. We determined the relative frequency of listings that are above or at the median price by borough and found Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%.
+
+```{r boroughs-rel_freq}
+abnb_sample %>%
+  count(neighbourhood_group, price_case) %>%
+  group_by(neighbourhood_group) %>%
+  mutate(rel_freq = n/sum(n)) %>%
+  filter(price_case == "Median or Above") %>%
+  arrange(desc(rel_freq))
+```
+
+### Neighborhood?
+
+After discovering the vairation in price between borough, we were very interested in exploring how price was affected by neighbourhood (within each borough). We calculated the median price of the top 10 neighborhoods and check their corresponding borough to see if they tend to lie in same borough, which we might expect to be Manhattan as it is the most expensive borough.
+
+```{r med-price-neighborhood}
+abnb_sample %>%
+  group_by(neighbourhood, neighbourhood_group) %>%
+  summarise(med_price = median(price)) %>%
+  arrange(desc(med_price)) %>%
+  head(10)
+```
+The neighborhoods with the most expensive Airbnbs come from a range of boroughs. In fact, all are represented in the top 10 equally. Surprisingly, the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. Given the extensive analysis already done for location by borough and co-ordinates, neighborhood will not be analyzed further as it is beyond the initial scope of our focus. Next we will investigate other location variables such as latitude and longitude as well was borough to predict price by location
+
+### Regression analysis
+
+As stated above, we would like to predict how much these location variables influence price. To do this we develop a linear model to describe how boroughs influence price and, since Manhattan had the largest volume of Airbnbs and the highest median price, that will be the baseline for comparison with other boroughs.
+
+```{r mutate-neighbourhood_group}
+abnb_sample <- abnb_sample %>%
+  mutate(neighbourhood_group = fct_relevel(neighbourhood_group, 
+                                           "Manhattan", 
+                                           "Brooklyn",
+                                           "Staten Island",
+                                           "Queens",
+                                           "Bronx"))
+```
+
+When creating a linear model to predict Airbnb price by borough. It is first important to discuss the assumptions we are making when performing this regression. We are assuming each listing is independent because the pricing of one space does not driectly influence the other. While some might argue there is dependence between listings to some extent, the market for Airbnbs in NYC is free and competitive so renters, ideally, don't collude.
 
 ```{r lm-price-borough}
 lm_price_borough <- lm(price ~ neighbourhood_group, data = abnb_sample)
 ```
 
-In addition to independence, there are other assumptions that need to be discussed. Thus, a residuals plot will be made:
+In addition to independence, there are other assumptions that need to be discussed. Thus, a residuals plot is shown below:
 
 ```{r lm_price_borough_aug-residuals}
 lm_price_borough_aug <- augment(lm_price_borough)
@@ -305,72 +373,17 @@ Constructing a confidence interval to find the difference in median prices betwe
 
 We are 95% confident that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. 
 
-### Visualizing Manhattan
-
-From the previous sections, it has become clear that Manhattan is the most expensive borough for Airbnbs. In order to confirm this visually, we will create a scatterplot. To simply the scatterplot, price will be broken down into two catergories based on the median price of all Airbnbs in NYC.
-
-Creating new variable price_case which describes whether the price of the listing is at or above the median price or below the median price:
-
-```{r median_price-mutate}
-abnb_sample <- abnb_sample %>%
-   mutate(price_median = median(price), 
-          price_case = case_when(
-      price >= price_median ~ "Median or Above",
-      price < price_median ~ "Below Median", 
-    ))
-```
-
-Visualizing by latidude and longitude co-ordinates and using color to distinguish between the price types:
-
-```{r price-at-location}
-abnb_sample %>%
-  ggplot(mapping = aes (x = longitude, 
-                        y = latitude, 
-                        color = price_case)) +
-  geom_jitter(alpha = 0.5) +
-  labs(title = "Prices at Latitude and Longitude Coordinates", 
-       x = "Longitude", 
-       y = "Latitude", 
-       color = "Price Case")
-```
-
-It is clear from this map, that the cases in which the prices are at the median or above (blue dots) are clustered around Manhattan. Therefore, visualization confirms our previous findings. The area that appears to have the second most number of blue dots is Brooklyn, which is right next to Manhattan. We use summary statistics to confirm. 
-
-Relative frequency of listings that are above or at the median price by borough:
-
-```{r boroughs-rel_freq}
-abnb_sample %>%
-  count(neighbourhood_group, price_case) %>%
-  group_by(neighbourhood_group) %>%
-  mutate(rel_freq = n/sum(n)) %>%
-  filter(price_case == "Median or Above") %>%
-  arrange(desc(rel_freq))
-```
-
-As visualized earlier, Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%.
-
-### Neighborhood?
-
-We have looked at the borough, latitude, and longitude co-ordinates so far. However, the final location indicator we have yet to take into account is neighborhood. We will calculate the median price of the top 10 neighborhoods and check their corresponding borough to see if they tend to lie in same borough, which we might expect to be Manhattan as it is the most expensive borough.
-
-Summary statistic of median price by neighborhood:
-
-```{r med-price-neighborhood}
-abnb_sample %>%
-  group_by(neighbourhood, neighbourhood_group) %>%
-  summarise(med_price = median(price)) %>%
-  arrange(desc(med_price)) %>%
-  head(10)
-```
-
-It appears that the neighborhoods with the most expensive Airbnbs come from a range of boroughs. In fact, all are represented in the top 10 equally. Surprisingly, the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. Given the extensive analysis already done for location by borough and co-ordinates, neighborhood will not be analyzed further as it is beyond the initial scope of our focus.
-
 
 ### Conclusion for Part I
 
 Based on our research question from our proposal, we wanted to determine how location played a role in determining the price of Airbnbs in New York City. First, we summarized the sample statistics of the boroughs in New York City such as median price and number of listings to get a basic understanding of the count and dsitribution of price in relation to borough. After finding out that both Manhattan and Brooklyn dominated the Airbnb scene in terms of number of listings, we wanted to see how these two locations play a role in the price of Airbnbs. We predicted that Manhattan would have a higher true median price than Brooklyn because Manhattan is known from previous knowledge to be a higher-class neighborhood. So, we conducted a hypothesis test to determine if there is a true median price difference between these two cities. We concluded that we did indeed have sufficent evidence to conclude that there is a true median price difference with Manhattan's median price being higher than Brooklyn's median price. After conducting a confidence interval for different in true median price, we are 95% confident that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. We then created a new variable called "price_median" which is a catagorical variable which indicated whether the price is at or above the median price of a listing or not. We then used this new variable to create a scatterplot map with color indicating price median to see how coordinates play a role in the price of Airbnbs. We concluded that Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%. Finally, we investigated last variable corresponding to location: neighbourhood. Looking into the top ten median priced neighborhoods for Airbnb's we surprisngly found that the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. 
 
 ### Part II: Availability and Property Listing
+
+For our second research question, we explore how the listing is presented on the Airbnb platform that might influence the price. These include variables like name, room_type, minimum_nights and calculated_host_listings_count. These are variables that might inform consumer choices and be indicative of the number of available days of a listing. Some variables that could be insightful include the name of the listing which we will use text analysis to analyze. Each observation is also classified as one of three room types: private room, shared room and entire home/apt. Moreover, we are trying to understand how the number of listings per host in NYC influence the availability. We believe this analysis could give us more insight into the type of hosts that use the Airbnb service. We hope to see how this mix of categorical and numerical values impacts one of the potential response variables. 
+
+In part two of our data analysis, we explore how variables such as room type, minimum nights required to book an Airbnb, number of reviews, etc can influence the availability of an Airbnb. 
+
 
 In part II, the following research question will be examined: How does the way in which a property is listed (type of room, for example) influence the availability of a listing?
 
@@ -759,5 +772,13 @@ We are 95% confident that the median availability for high volume hosts is betwe
 ### Conclusion For Part 2
 
 Based on our second research question in our proposal, we wanted to see how the way in which a property is listed (type of room and description for example) influences the availability of a listing. Assuming availibility is a good predictor of desirability (more availible, less desireable). In our proposal we looked at how the variable “room_type” affects the availability of the listing. We hypothesized that room_type would be a major factor in predicting availability because our exploratory analysis showed that a shared room is likely the least desired of the three room types due to the largest IQR and highest median availability of the three roomtypes. Through our text analysis of the descriptions we found words associated with private were highly sought after such as "private", "apartment" indicating a private enclave, and "bedroom" indicating one's private space. In additon, our linear model predicting availability by all variables regarding listing showed room type to be a relevant predictor. In additon, we predicted that more experienced hosts with more listings would have more availability days because they have more listings and our hypothesis test indicated that we were right.
+
+### Areas of Improvement:
+Perhaps one of the biggest concerns among our dataset was that we could not prove constant variance. The spread of the residuals in our residual plots did not suggest constant variance. This means that when plotting the individual error against the predicted value, the variance of the error predicted value should be constant. Graphically, the spread of the points around the regression line is too variable. Therefore, we had to proceed with caution when drawing assumptions from the linear regression. However, if we limit our conclusions to predictions, the consequences of a weak or not constant variance are less pressing.
+Furthermore, we assumed independence in our sample, implying that each listing is independent because the pricing of one space does not directly influence the other. While some might argue there is dependence between listings to some extent, the market for Airbnbs in NYC is free and competitive, so renters, ideally, don't collide. In other words, it can be safely assumed that hosts of Airbnbs are working together to price fix listings in New York City. Another critical concern to consider in our analysis are the probabilities of type 1 and type 2 errors. For the entirety of our analysis, we set our alpha level to 0.05. However, we could have set the alpha level lower to reduce type 1 error, but consequently, increase type 2 error. It is important to consider the needs when it comes to analyzing the data. If someone wants to determine, for instance, on average, which borough is cheaper to book an Airbnb between Manhattan and Brooklyn, there would have to set the predetermined alpha level on their desired outcome. A type 1 error would mean that we reject that is no significant true median difference when, in reality, there is a true median difference. A type 2 error would mean that we conclude that there is a true median difference when, in reality, there is not. Someone who is on a very tight budget and cannot afford the more expensive Airbnb may want to decrease the type 1 error as much as possible to avoid spending more than they expected. (This is all assuming they did not know the actual price of the Airbnb and had to pick whether to stay in Manhattan or Brooklyn before booking an Airbnb). To decrease the type 1 error, this particular person could set the alpha level to a number less than 0.05. Our analysis could be stronger if we took into account the purposes that people will use it for.
+If we were going to continue work on the project, we could delve deeper into locations such as specific neighborhoods. This would allow users of our analysis to investigate further, more specifically, the cheapest places, on average, of New York City. For example, although the Bronx is one of the more affordable boroughs in our analysis, the most expensive neighborhood is in the Bronx. For travelers on a very tight budget, they may be misled by the information presented in our dataset because we were not specific enough with the location. 
+
+### Overall Conclusion:
+Our data analysis concluded that: based on our research question from our proposal, we wanted to determine how location and availability played a role in determining the price of Airbnbs in New York City. We concluded that both Manhattan and Brooklyn dominated the Airbnb scene in terms of the number of listings, we wanted to see how these two locations play a role in the price of Airbnbs. Manhattan had a higher true median price than Brooklyn because Manhattan is known from previous knowledge to be an upper-class neighborhood; a hypothesis test confirmed this. A 95% confidence interval showed that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. We also concluded in our analysis that Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%. Finally, we investigated the last variable corresponding to the location: neighborhood. Looking into the top ten median-priced neighborhoods for Airbnb's we surprisingly found that the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. Based on our second research question in our proposal, we wanted to see how the way in which a property is listed (the type of room and description for example) influences the availability of a listing. Assuming availability is a good predictor of desirability (more available, less desirable). Our analysis revealed that a shared room is likely the least desired of the three-room types due to the largest IQR and highest median availability of the three-room types. Furthermore, we did conducted text analysis of the descriptions, we found words associated with private were highly sought after such as "private", "apartment" indicating a private enclave, and "bedroom" indicating one's private space. In addition, our linear model predicting availability by all variables regarding listing showed room type to be a relevant predictor. In addition, we predicted that more experienced hosts with more listings would have more availability days because they have more listings and our hypothesis test indicated that we were right. In our regression, we determined that location is a significant variable in determining the price of Airbnb listings in New York City. 
 
 ### Overall
